第四次提交

--- a/css/index.css
+++ b/css/index.css
@@ -271,11 +271,10 @@ body {
 }
 
 .text:hover {
-    background-color: rgb(255 255 255 / 20%);
-    backdrop-filter: blur(10px);
-    transform: rotateX(-1deg) translateX(-50%);
+    /* background-color: rgb(255 255 255 / 20%); */
+    /* backdrop-filter: blur(10px); */
+    /* transform: rotateX(-1deg) translateX(-50%); */
 }
-
 
 .text li {
     list-style: none;
