--- a/css/index.css
+++ b/css/index.css
@@ -44,7 +44,8 @@ body {
 .bg {
     width: 100%;
     height: 100%;
-    background: url('../img/index.jpg') center center no-repeat;
+    /* background: url('../img/index.jpg') center center no-repeat; */
+    background: url('https://bing.img.run/uhd.php') center center no-repeat;
     background-size: cover;
     z-index: -1;
     position: absolute;
