--- a/css/index.css
+++ b/css/index.css
@@ -4,6 +4,11 @@
 }
 
 @font-face {
+    font-family: Read;
+    src: url('../font/Read.ttf');
+}
+
+@font-face {
     font-family: Miao;
     src: url(../font/Miao.ttf);
 }
@@ -165,13 +170,6 @@ body {
     }
 }
 
-
-#box {
-    width: 100%;
-    height: 100px;
-    background-color: aqua;
-}
-
 .time {
     position: fixed;
     top: var(--max-top);
@@ -192,6 +190,7 @@ body {
     font-weight: 500;
     transition: .25s;
     text-shadow: 0 0 20px rgb(0 0 0 / 35%);
+    font-family: Read;
 }
 
 .time:hover {
@@ -270,12 +269,6 @@ body {
     transform-origin: 50% 0%;
     perspective: 5px;
 }
-
-/* .text:hover {
-    background-color: rgb(255 255 255 / 20%);
-    backdrop-filter: blur(10px);
-    transform: rotateX(-1deg) translateX(-50%);
-} */
 
 .text li {
     list-style: none;
