--- a/css/index.css
+++ b/css/index.css
@@ -272,7 +272,6 @@ body {
     left: 50%;
     border-radius: 25px;
     transform: translateX(-50%);
-
     color: #fff;
     font-size: small;
     border-radius: 25px;
@@ -423,4 +422,48 @@ body {
 
 input::placeholder {
     color: #2c2c2c;
+}
+
+.text-style {
+    width: 100%;
+    height: 100%;
+    /* background-color: #ccc; */
+    opacity: 1;
+    position: absolute;
+    border-radius: 25px;
+    overflow: hidden;
+}
+
+.text-style span {
+    border-radius: 50%;
+    pointer-events: none;
+    position: absolute;
+    transform: translate(-50%, -50%);
+    animation: animate 1s ease-out;
+
+
+}
+
+@keyframes animate {
+    0% {
+        width: 0;
+        height: 0;
+        opacity: 0;
+        backdrop-filter: blur(0px);
+    }
+
+    50% {
+        background-color: rgba(255, 255, 255, .5);
+        width: calc(var(--max-width) - 50px);
+        height: calc(var(--max-width) - 50px);
+        opacity: 0.5;
+        backdrop-filter: blur(10px);
+    }
+
+    100% {
+        width: calc(var(--max-width));
+        height: calc(var(--max-width));
+        opacity: 0;
+        backdrop-filter: blur(0px);
+    }
 }
